<resources>
    <string name="app_name">bamms-project</string>
    <string name="permissionrequestmessage">Need to activate several permission in order to use this app</string>
    <string name="got_it">Got it</string>
    <string name="title">Title</string>
    <string name="hint_totalbalance">Rp. 13.000.000</string>
    <string name="total_balance">Total balance</string>
    <string name="cardname">Cardname</string>
    <string name="status">Status</string>
    <string name="balance">Balance</string>
    <string name="transaction">Transaction</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="deposit">Deposit</string>
    <string name="withdraw">Withdraw</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account ? Please sign up in here</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Please signin here</string>
    <string name="register">Register</string>
    <string name="information">Information</string>
    <string name="save">Save</string>
    <string name="your_account">Your account</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="retype_password">Retype password</string>
    <string name="phone">Phone</string>
    <string name="account_type">Account type</string>
    <string name="address">Address</string>
    <string name="select_account_type">- Account type -</string>
    <string name="active">Active</string>
    <string name="last_7_days_transaction">Last 7 days transaction</string>
    <string name="no_transaction_data">No transaction data</string>
    <string name="proceed">Proceed</string>
    <string name="amount">Amount</string>
    <string name="send_to">Send to</string>
    <string name="description">Description</string>
    <string name="idr">IDR</string>
    <string name="source_account">Source account</string>
    <string name="destination_account">Destination account</string>
    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="transfer">Transfer</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation">Are you sure want to logout ?</string>
    <string name="yes">Yes</string>

</resources>
