<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/margin_normal"
    android:paddingRight="@dimen/margin_normal"
    >

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="@dimen/size_image_64dp"
        android:layout_height="@dimen/size_image_64dp"
        android:layout_marginRight="@dimen/margin_small"
        android:src="@drawable/ic_mastercard"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_weight="1">
        <com.app.infideap.stylishwidget.view.ATextView
            android:id="@+id/tv_cardName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack_1000"
            android:text="@string/cardname"
            android:textAppearance="@style/TextStyle.Medium"/>
        <com.app.infideap.stylishwidget.view.ATextView
            android:id="@+id/tv_cardStaths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack_1000"
            android:text="@string/status"
            android:textAppearance="@style/TextStyle.Small"/>
    </LinearLayout>

    <com.app.infideap.stylishwidget.view.ATextView
        android:id="@+id/tv_balance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack_1000"
        android:text="@string/balance"
        android:textAppearance="@style/TextStyle.Medium"
        android:textStyle="bold"
        android:layout_gravity="center_vertical"
        />
</LinearLayout>