<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="rezkyaulia.com.bamms_project.ui.register.RegisterViewModel" />

    </data>

    <RelativeLayout
        android:id="@+id/layout_content_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        >

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/margin_normal"
            android:paddingRight="@dimen/margin_normal"
            android:paddingTop="@dimen/margin_normal"
            android:layout_centerInParent="true"
            android:layout_above="@+id/textView_signIn"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/linearLayout">


                <com.app.infideap.stylishwidget.view.ATextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textAppearance="@style/TextStyle.Large"
                    android:textColor="@color/colorBlack_1000"
                    android:layout_gravity="center_horizontal"
                    />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_small" />

                <com.app.infideap.stylishwidget.view.ATextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_account"
                    android:textColor="@color/colorBlack_1000"
                    android:textAppearance="@style/TextStyle.Medium"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/margin_normal"
                    android:paddingRight="@dimen/margin_normal"
                    android:layout_margin="@dimen/margin_large">


                    <com.app.infideap.stylishwidget.view.ATextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/full_name"
                        android:textAppearance="@style/TextStyle.Medium"
                        />

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_xsmall" />

                    <com.app.infideap.stylishwidget.view.AEditText
                        android:id="@+id/editText_fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditText.RoundBorder"
                        />

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_small" />

                    <com.app.infideap.stylishwidget.view.ATextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textAppearance="@style/TextStyle.Medium"
                        />

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_xsmall" />

                    <com.app.infideap.stylishwidget.view.AEditText
                        android:id="@+id/editText_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditText.RoundBorder"
                        />

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_small" />


                    <com.app.infideap.stylishwidget.view.ATextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAppearance="@style/TextStyle.Medium"
                        />

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_xsmall" />

                    <com.app.infideap.stylishwidget.view.AEditText
                        android:id="@+id/editText_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        style="@style/EditText.RoundBorder"
                        />

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_small" />

                    <LinearLayout
                        android:id="@+id/layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.app.infideap.stylishwidget.view.ATextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textAppearance="@style/TextStyle.Medium"
                            />

                        <android.support.v4.widget.Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/margin_xsmall" />

                        <com.app.infideap.stylishwidget.view.AEditText
                            android:id="@+id/editText_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/EditText.RoundBorder"
                            android:inputType="textPassword"
                            />
                    </LinearLayout>


                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_small" />

                    <LinearLayout
                        android:id="@+id/layout_retypePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.app.infideap.stylishwidget.view.ATextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/retype_password"
                            android:textAppearance="@style/TextStyle.Medium"
                            />

                        <android.support.v4.widget.Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/margin_xsmall" />

                        <com.app.infideap.stylishwidget.view.AEditText
                            android:id="@+id/editText_retypePassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/EditText.RoundBorder"
                            android:inputType="textPassword"
                            />

                    </LinearLayout>

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_small" />

                    <LinearLayout
                        android:id="@+id/layout_cardtype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.app.infideap.stylishwidget.view.ATextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/account_type"
                            android:textAppearance="@style/TextStyle.Medium"
                            />

                        <android.support.v4.widget.Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/margin_xsmall" />

                        <Spinner
                            android:id="@+id/spinner_accountType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/Widget.AppCompat.Spinner.Underlined"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layout_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.app.infideap.stylishwidget.view.ATextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/phone"
                            android:textAppearance="@style/TextStyle.Medium"
                            />

                        <android.support.v4.widget.Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/margin_xsmall" />

                        <com.app.infideap.stylishwidget.view.AEditText
                            android:id="@+id/editText_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/EditText.RoundBorder"
                            android:inputType="textPassword"
                            />

                    </LinearLayout>

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_small" />


                    <LinearLayout
                        android:id="@+id/layout_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.app.infideap.stylishwidget.view.ATextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textAppearance="@style/TextStyle.Medium"
                            />

                        <android.support.v4.widget.Space
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/margin_xsmall" />

                        <com.app.infideap.stylishwidget.view.AEditText
                            android:id="@+id/editText_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            style="@style/EditText.RoundBorder"
                            android:inputType="textPassword"
                            />

                    </LinearLayout>

                    <android.support.v4.widget.Space
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/margin_small" />

                </LinearLayout>
                <com.app.infideap.stylishwidget.view.ATextView
                    android:id="@+id/button_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Button.Success.Fill"
                    android:text="@string/save"
                    />

                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_xlarge" />
            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <com.app.infideap.stylishwidget.view.ATextView
            android:id="@+id/textView_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:gravity="center_horizontal"
            android:background="@color/colorAccent"
            android:layout_alignParentBottom="true"
            android:text="@string/already_have_an_account_sign_in_here"
            android:textAppearance="@style/TextStyle.Small"
            android:textColor="@color/colorWhite"/>

        <FrameLayout
            android:visibility="gone"
            android:id="@+id/layout_progress"
            android:background="@color/colorWhiteTransparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <rezkyaulia.com.bamms_project.view.ALoadingView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

    </RelativeLayout>

</layout>
