<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="rezkyaulia.com.bamms_project.ui.login.LoginViewModel" />

    </data>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/layout_content_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_normal"
                android:paddingLeft="@dimen/margin_normal"
                android:paddingRight="@dimen/margin_normal"
                android:paddingTop="@dimen/margin_normal"
                android:layout_margin="@dimen/margin_xlarge"
                android:layout_centerInParent="true"
                android:id="@+id/linearLayout">


                <com.app.infideap.stylishwidget.view.AEditText
                    android:id="@+id/edittext_username"
                    style="@style/EditText.RoundBorder.Transparent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="24"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/TextStyle.Medium"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.app.infideap.stylishwidget.view.AEditText
                        android:id="@+id/edittext_pin"
                        style="@style/EditText.RoundBorder.Transparent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="24"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textAppearance="@style/TextStyle.Medium"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageview_eye"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:src="@drawable/ic_eye"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone"/>
                </RelativeLayout>


                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/space_small" />

                <com.app.infideap.stylishwidget.view.AButton
                    android:id="@+id/button"
                    style="@style/Button.Default.Outline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textAppearance="@style/TextStyle.Medium" />


                <android.support.v4.widget.Space
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/margin_normal" />


            </LinearLayout>


            <FrameLayout
                android:visibility="gone"
                android:id="@+id/layout_progress"
                android:background="@color/colorWhiteTransparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <rezkyaulia.com.bamms_project.view.ALoadingView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </FrameLayout>



            <com.app.infideap.stylishwidget.view.ATextView
                android:id="@+id/textView_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_normal"
                android:gravity="center_horizontal"
                android:layout_alignParentBottom="true"
                android:text="@string/don_t_have_an_account_sign_up_here"
                android:textAppearance="@style/TextStyle.Medium"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>

</layout>
