<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="rezkyaulia.com.bamms_project.MainViewModel" />

    </data>


    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <RelativeLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            >

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/coordinatorLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_material_white"
                tools:context=".ui.main.MainActivity">

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/appBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_material_white"

                    app:elevation="4dp">

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:background="@color/background_material_white"
                        android:layout_height="?android:attr/actionBarSize">

                        <LinearLayout
                            android:id="@+id/linearLayout_toolbar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView_back"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:tint="@color/icon"
                                android:paddingRight="@dimen/margin_normal"
                                android:src="@drawable/ic_arrow_back"
                                android:visibility="gone"/>

                            <com.app.infideap.stylishwidget.view.ATextView
                                android:id="@+id/textView_title"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center_vertical"
                                android:layout_centerVertical="true"
                                android:text="@string/app_name"
                                android:textAppearance="@style/TextStyle.Small"
                                android:textColor="@color/primaryTextColor" />

                        </LinearLayout>
                    </android.support.v7.widget.Toolbar>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardElevation="@dimen/margin_small"
                        android:layout_marginLeft="@dimen/margin_normal"
                        android:layout_marginRight="@dimen/margin_normal"
                        android:layout_marginBottom="@dimen/margin_normal"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="@dimen/margin_normal"
                            android:orientation="vertical">

                            <com.app.infideap.stylishwidget.view.ATextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_balance"
                                android:textAppearance="@style/TextStyle.Small"
                                android:textColor="@color/colorWhite"
                                />

                            <com.app.infideap.stylishwidget.view.ATextView
                                android:id="@+id/tv_totalBalance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/hint_totalbalance"
                                android:textAppearance="@style/TextStyle.Display2"
                                android:textColor="@color/colorWhite"
                                />

                        </LinearLayout>

                    </android.support.v7.widget.CardView>
                </android.support.design.widget.AppBarLayout>

                <include layout="@layout/content_activity_main" android:id="@+id/content_layout"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

            </android.support.design.widget.CoordinatorLayout>

        </RelativeLayout>


        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:fitsSystemWindows="false"
            app:elevation="0dp">

        </android.support.design.widget.NavigationView>

    </android.support.v4.widget.DrawerLayout>
</layout>

